--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
-jolicloud-launcher (1.0.0~dev1) UNRELEASED; urgency=low
+jolicloud-launcher (1.0.0~dev1) robby-dev; urgency=low
 
- *
+ * Initial development release
 
  -- Adam McDaniel <adam@jolicloud.org>  Sun, 13 Jun 2010 21:51:35 +0200
 
