--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+jolicloud-launcher (1.0.0~dev7) robby-dev; urgency=low
+
+  * Configure package to replace, provide, and conflict with jolicloud-
+    webapp-jolicloud-launcher
+  * Changed base log dir to /var/tmp/
+
+ -- Adam McDaniel <adam@jolicloud.org>  Tue, 15 Jun 2010 19:44:05 +0200
+
 jolicloud-launcher (1.0.0~dev6) robby-dev; urgency=low
 
   * If a fight gets started with multiple jolicloud-daemons, jolicloud-
