--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+jolicloud-launcher (1.0.0~dev9) robby-dev; urgency=low
+
+  * Fixed the jolicloud-daemon pgrep command
+  * Fixed printf output of exited jolicloud-daemon process
+  * Fixed exit code logic on failed http connection attempt
+  * Added --enable-ipv6 flag as recommended workaround to Chromium Bug
+    8910
+
+ -- Adam McDaniel <adam@jolicloud.org>  Thu, 17 Jun 2010 22:58:54 +0200
+
 jolicloud-launcher (1.0.0~dev8) robby-dev; urgency=low
 
   * Added an online/offline mode checker to send the user to a local
