--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+jolicloud-launcher (1.1.0) robby-lucid; urgency=low
+
+  * Do not call main jolicoud-launcher process "jolicloud-launcher [main]"
+  * Configure jolicloud-launcher to 'provide' netbook-launcher.
+  * Set source format to "3.0 (git)"
+
+ -- Adam McDaniel <adam@jolicloud.org>  Sat, 28 Aug 2010 23:49:41 -0600
+
 jolicloud-launcher (1.0.4) robby; urgency=low
 
   * make all chromium windows maximized if screen size < 13"
