--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+jolicloud-launcher (1.1.3) robby-lucid; urgency=low
+
+  * Amend build-depends with git-core
+  * (un)Register with and respond to gnome-session through DBus
+    interface
+
+ -- Benjamin Ryzman <benjamin@jolicloud.org>  Tue, 14 Sep 2010 12:37:38 +0200
+
 jolicloud-launcher (1.1.2) robby-lucid; urgency=low
 
   * Better handling of children lifecycle, only sleep when necessary
