--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+jolicloud-launcher (1.1.4) robby-lucid; urgency=low
+
+  * remove invalid errors on connect_to_signal, better info on shutdown
+
+ -- Benjamin Ryzman <benjamin@jolicloud.org>  Tue, 14 Sep 2010 13:57:47 +0200
+
 jolicloud-launcher (1.1.3) robby-lucid; urgency=low
 
   * Amend build-depends with git-core
