--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+jolicloud-launcher (1.0.5.1) robby; urgency=low
+
+  * Reopen STDOUT and STDERR for jolicloud-daemon
+
+ -- Andrew Stormont <andy@jolicloud.org>  Sat, 18 Sep 2010 12:35:29 +0100
+
 jolicloud-launcher (1.0.5) robby; urgency=low
 
   [ Adam McDaniel ]
