--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+jolicloud-launcher (1.1.5) robby-lucid; urgency=low
+
+  * Send the QUIT signal first, so that nickel-browser does not Snap
+  * Use POSIX macros for abort signal/exit status handling
+
+ -- Benjamin Ryzman <benjamin@jolicloud.org>  Wed, 22 Sep 2010 11:27:12 +0200
+
 jolicloud-launcher (1.1.4.1) robby; urgency=low
 
   * Reopen STDOUT and STDERR for jolicloud-daemon
