--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+jolicloud-launcher (1.1.11natty1) natty; urgency=low
+
+  * Moved jolicloud-launcher.desktop into /usr/share/applications,
+    Created jolicloud gnome-session configs in /usr/share/xsession and
+    /usr/share/gnome-session/sessions to call jolicloud-launcher.desktop
+    only when booting into the Jolicloud session.
+
+ -- Adam McDaniel <adam@jolicloud.org>  Mon, 23 May 2011 11:08:50 -0600
+
 jolicloud-launcher (1.1.11) robby-1.2; urgency=low
 
   * Incognito mode if guest
